--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,7 +4,10 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-  requirements_file: requirements.txt
+
+python:
+  install:
+    - requirements: requirements.txt
 
 sphinx:
   configuration: docs/source/conf.py
